[package]
name = "dicom_tranformer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dicom = {version = "0.9.0", features = ["image"]}
image = "0.25.9"
thiserror = "2.0.17"
tokio = {version = "1.49.0", features = ["full"]}
tower-http = {version = "0.6.8", features = ["fs", "trace"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
