[package]
name = "dicom_tranformer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.8", features = ["multipart"]}
dicom = {version = "0.9.0", features = ["image"]}
image = "0.25.9"
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = {version = "1.49.0", features = ["full"]}
tower-http = {version = "0.6.8", features = ["fs", "trace", "cors"]}
tower = "0.4.13"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
uuid = {version = "1.20.0", features = ["v4"]}