[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-storage = "0.3.0"
js-sys = "0.3.85"
log = "0.4.29"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
wasm-log = "0.3.1"
web-sys = { version = "0.3.85", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "FormData",
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "File",
    "FileList"
] }
yew = "^0.19"
